.azdevops/poi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi-deployment
  namespace: backend
  labels:
    deploy: poi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi
        image: registryhbr8656.azurecr.io/tripinsights/poi:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: poi
  ports:
    - protocol: TCP
      name: poi-http
      port: 80
      targetPort: 80
    - protocol: TCP
      name: poi-https
      port: 443
      targetPort: 443
