.azdevops/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
  namespace: backend
  labels:
    deploy: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: registryhbr8656.azurecr.io/tripinsights/prometheus:latest           
        ports:
        - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      name: prometheus-http
      port: 80
      targetPort: 9090
    - protocol: TCP
      name: prometheus-https
      port: 443
      targetPort: 9090
    - protocol: TCP
      name: prometheus
      port: 9090
      targetPort: 9090
