.azdevops/tripviewer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer-deployment
  namespace: frontend
  labels:
    deploy: tripviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - name: tripviewer
        image: registryhbr8656.azurecr.io/tripinsights/tripviewer:1.0
        ports:
        - containerPort: 80
      - env:
        - name: TRIPS_API_ENDPOINT
          value: "http://trips.backend.svc.cluster.local"
        - name: USERPROFILE_API_ENDPOINT
          value: "http://userprofile.backend.svc.cluster.local"
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
  namespace: frontend
spec:
  type: ClusterIP
  selector:
    app: tripviewer
  ports:
    - protocol: TCP
      name: tripviewer-http
      port: 80
      targetPort: 80
    - protocol: TCP
      name: tripviewer-https
      port: 443
      targetPort: 443
