.azdevops/user-java-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java-deployment
  namespace: backend
  labels:
    app: user-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: user-java
        image: registryhbr8656.azurecr.io/tripinsights/user-java:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: user-java
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: user-java
  ports:
  - port: 80
    protocol: TCP
    name: userjava-http
  - port: 443
    protocol: TCP
    name: userjava-https
