.azdevops/userprofile-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile-deployment
  namespace: backend
  labels:
    deployment: userprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: userprofile
        image: registryhbr8656.azurecr.io/tripinsights/userprofile:latest 
        ports:
        - containerPort: 80
        volumeMounts:
          - name: secrets-store-inline
            mountPath: "/secrets"
            readOnly: true
      volumes:
      - name: secrets-store-inline
        csi: 
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "trip-insights-vault"
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: userprofile
  ports:
  - port: 80
    protocol: TCP
    name: userprofile-http
  - port: 443
    protocol: TCP
    name: userprofile-https
