.azdevops/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend
  namespace: backend
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: tripviewer.233198138dbc4f8db78c.westus.aksapp.io
    http:
      paths:
      - path: /api/poi
        pathType: Prefix
        backend:
          service: 
            name: poi
            port: 
              number: 80
      - path: /api/trips
        pathType: Prefix
        backend:
          service: 
            name: trips
            port: 
              number: 80
      - path: /api/user-java
        pathType: Prefix
        backend:
          service: 
            name: user-java
            port: 
              number: 80
      - path: /api/user
        pathType: Prefix
        backend:
          service: 
            name: userprofile
            port: 
              number: 80
      - path: /prometheus
        pathType: Prefix
        backend:
          service: 
            name: prometheus
            port: 
              number: 9090
