.azdevops/tripinsights-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripinsights-ingress
  namespace: frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /api/user(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: userprofile
            port:
              number: 80      
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: tripviewer
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripinsights-ingress-static
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  rules:
  - http:
      paths:
      - path:
        pathType: Prefix
        backend:
          service:
            name: tripviewer
            port: 
              number: 80
        path: /static(/|$)(.*)
